- fix "vertical-align" chi tiết gói thầu & API nộp HSDT

--- a/src/app/layout/package/package-detail/package-detail-info/information/information.component.scss
+++ b/src/app/layout/package/package-detail/package-detail-info/information/information.component.scss
@@ -61,3 +61,9 @@
 .color-link{
     color: #00a0e3;
 }
+table , td {
+    vertical-align: top;
+    .field-name{
+        padding-top: 0.8rem;
+    }
+}
